Fixed Spacing of Admin Console Filters

--- a/admin/index.css
+++ b/admin/index.css
@@ -37,7 +37,7 @@ main section h1 {
   border: 2px solid var(--primary-text-color);
   border-radius: 10pt;
   padding: 3pt;
-  margin: 5pt auto;
+  margin: 5pt auto 10pt auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,7 +64,6 @@ main section h1 {
 }
 
 .list .toolbar {
-  height: 40pt;
   display: flex;
   gap: 10pt;
 }
@@ -77,7 +76,6 @@ main section h1 {
   align-items: center;
   font-weight: bold;
   padding: 5pt 10pt;
-  margin-top: 15pt;
   cursor: pointer;
 }
 
@@ -93,7 +91,6 @@ main section h1 {
   display: flex;
   align-items: center;
   padding: 5pt;
-  margin-top: 15pt;
 }
 
 .list .filters .searchField input {
